<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:id="@+id/main_container"
    tools:context=".MerchantDetailsScreen">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="Enter Session Token"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/shopperTokenEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="Enter Shopper Token"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/environmentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Select Environment"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/shopperTokenEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/upiRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Enable UPI stand alone"
        app:layout_constraintEnd_toEndOf="@+id/environmentSpinner"
        app:layout_constraintStart_toStartOf="@+id/environmentSpinner"
        app:layout_constraintTop_toBottomOf="@+id/environmentSpinner" />

    <RadioButton
        android:id="@+id/cardRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Enable card stand alone"
        app:layout_constraintEnd_toEndOf="@+id/environmentSpinner"
        app:layout_constraintStart_toStartOf="@+id/environmentSpinner"
        app:layout_constraintTop_toBottomOf="@+id/upiRadioButton" />

    <RadioButton
        android:id="@+id/showQrOnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Show UPI QR on Load"
        app:layout_constraintEnd_toEndOf="@+id/environmentSpinner"
        app:layout_constraintStart_toStartOf="@+id/environmentSpinner"
        app:layout_constraintTop_toBottomOf="@+id/cardRadioButton" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_bg"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toBottomOf="@+id/showQrOnLoad" />
</androidx.constraintlayout.widget.ConstraintLayout>