...
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openCardAlone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/openByDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:text="Open by default token"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openCardAndUPI" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:padding="8dp"
        android:text="Enter Token"
...
