...
        android:layout_height="match_parent"
        android:background="#6E5B5B"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topConstraint"
...
